@@ -1,3 +1,7 @@
+[B]1.5.7:[/B]
+- podpora pre iptv.merge 
+[B]1.5.6:[/B]
+- oprava ziveho vysielania
 [B]1.5.4:[/B]
 - vyhodene prezeranie archivu
 - oprava ziveho vysielania
